src/styles/styles.css
.main {
    display: flex;
    height: 100vh;
    overflow: hidden;
    width: 100vw;
}

.aside {
    background-color: var(--backgroundColor);
    height: 100%;
    min-width: 100px;
    overflow: hidden;
}

@media (min-width: 768px) {
    .aside {
        min-width: 300px;
    }
}

.nav-brand {
    color: #FFFFFF;
    font-size: 3rem;
    padding: 15px 0px;
    text-align: center;
    width: 100%;
}

.nav-brand a {
    align-items: center;
    display: flex;
    justify-content: center;
    text-align: center;
}

.nav-brand span {
    display: none;
}

@media (min-width: 768px) {
    .nav-brand span {
        display: block;
    }
}

.navbar {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.navbar-item {
    align-items: center;
    display: flex;
    height: 100px;
    justify-content: center;
    padding: 15px;
    text-align: center;
    transition: background-color .2s ease;
    -webkit-transition: background-color .2s ease;
    -moz-transition: background-color .2s ease;
    -ms-transition: background-color .2s ease;
    -o-transition: background-color .2s ease;
}

@media (min-width: 768px) {
    .navbar-item {
        height: auto;
        justify-content: start;
        padding: 25px;
    }
}

.navbar-item span {
    display: none;
    transition: background-color .2s ease;
    -webkit-transition: background-color .2s ease;
    -moz-transition: background-color .2s ease;
    -ms-transition: background-color .2s ease;
    -o-transition: background-color .2s ease;
}

@media (min-width: 768px) {
    .navbar-item span {
        display: inline-block;
        padding: 0px 0px 0px 15px;
    }
}

.item-selected {
    background-color: var(--primaryColor);
}

.navbar-item:hover {
    background-color: var(--primaryColor);
}

.navbar-item>img {
    margin-right: 10px;
    width: 25px;
}

/* GAMES */
.main-games {
    overflow-y: auto;
    padding: 30px;
    width: 100%;
}

.games-grid {
    display: grid;
    gap: 20px;
    grid-template-columns: repeat(auto-fit, max(150px));
    justify-content: center;
}

@media (min-width: 576px) {
    .games-grid {
        grid-template-columns: repeat(auto-fit, max(250px));
    }
}

/* CASE GAME */
.game-case {
    display: flex;
    height: 100px;
    outline: 4px solid #000;
    position: relative;
    width: 150px;
}

@media (min-width: 576px) {
    .game-case {
        height: 200px;
        width: 250px;
    }
}

.game-case:hover>.game-case-info {
    height: 100px;
}

.game-case-left {
    align-items: center;
    background: var(--linearGradient);
    border-right: 4px solid #000;
    display: flex;
    height: 100%;
    justify-content: center;
    outline: 3px solid var(--backgroundColor);
    width: 30px;
}

.game-case-right {
    height: 100%;
    width: 220px;
}

.game-case-right>img {
    height: 100%;
    object-fit: fill;
    width: 100%;
}

/*INFO GAME*/
.game-case-info {
    background-color: rgba(0, 0, 0, 0.7);
    bottom: 0;
    display: grid;
    height: 0px;
    overflow: hidden;
    place-content: center;
    position: absolute;
    transition: all .3s ease;
    width: 100%;
    z-index: 100;
    -webkit-transition: all .3s ease;
    -moz-transition: all .3s ease;
    -ms-transition: all .3s ease;
    -o-transition: all .3s ease;
}

.game-case-btn {
    background-color: #000;
    color: var(--secondaryColor);
    font-weight: bold;
    outline: 1px solid var(--secondaryColor);
    padding: 10px 30px;
    transition: all .3s ease;
    -webkit-transition: all .3s ease;
    -moz-transition: all .3s ease;
    -ms-transition: all .3s ease;
    -o-transition: all .3s ease;
}

.game-case-btn:hover {
    background: var(--primaryColor);
    border-radius: 30px;
    -webkit-border-radius: 30px;
    -moz-border-radius: 30px;
    -ms-border-radius: 30px;
    -o-border-radius: 30px;
}

/* Emulador */
.game {
    align-items: center;
    display: flex;
    flex-direction: column;
    gap: 20px;
    height: 100vh;
    justify-content: center;
    text-align: center;
    width: 100%;
}

.game p {
    color: #FFFFFF;
    font-size: 2.5rem;
}

.emulator-wrapper {
    background-color: #202020;
    height: 550px;
    padding: 10px;
    width: 100%;
}

@media (min-width: 576px) {
    .emulator-wrapper {
        max-width: 700px;
    }
}

.emulator {
    height: 100%;
    max-width: 100%;
    width: 100%;
}

/* Credits */
.creditos-wrapper {
    color: #FFFFFF;
    display: flex;
    flex-direction: column;
    overflow-y: scroll;
    padding: 30px;
    width: 100%;
}

.view-title {
    color: #FFFFFF;
    font-size: 3rem;
    margin: 0px 0px 30px 0px;
}

.creditos-wrapper>section {
    align-items: center;
    display: flex;
    flex-direction: column;
    font-family: monospace;
    height: 100%;
    justify-content: center;
    margin-bottom: 20px;
}

.creditos-img {
    height: 200px;
    margin-bottom: 30px;
    width: 200px;
}

.creditos-img>img {
    height: 100%;
    object-fit: contain;
    width: 100%;
}

.creditos-wrapper>section p {
    font-size: 1rem;
    font-weight: bold;
    margin-bottom: 20px;
    max-width: 500px;
    text-align: center;
}

.link-btn {
    background-color: #000;
    font-size: 1.2rem;
    font-weight: bold;
    margin-top: 10px;
    padding: 10px 20px;
    text-transform: uppercase;
    transition: all .3s ease;
    -webkit-transition: all .3s ease;
    -moz-transition: all .3s ease;
    -ms-transition: all .3s ease;
    -o-transition: all .3s ease;
}

.link-btn:hover {
    background-color: #FFFFFF;
    color: #000;
}

